# creel

./: .air.toml  .dockerignore  .env  .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  buf.yaml  creel.example.yaml  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  proto_test.go  sonar-project.properties
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  composer.json  package-lock.json  package.json  phpunit.xml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONCEPTS.md  CREEL_CHAT.md  DEPLOYMENT.md  DEVELOPMENT.md  FULLSTART.md  QUICKSTART.md  ROADMAP.md
mcp/: server.go  server_test.go  tools.go  tools_test.go
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_pgvector.down.sql  000002_pgvector.up.sql  000003_chunk_document_sequence_idx.down.sql  000003_chunk_document_sequence_idx.up.sql  000004_admin_configs.down.sql  000004_admin_configs.up.sql  000005_document_citation_fields.down.sql  000005_document_citation_fields.up.sql  000006_processing_jobs.up.sql  000007_document_upload.down.sql  000007_document_upload.up.sql  000008_topic_chunking_strategy.down.sql  000008_topic_chunking_strategy.up.sql  000009_memories.up.sql  000010_topic_memory_enabled.down.sql  000010_topic_memory_enabled.up.sql  000011_compaction_records.down.sql  000011_compaction_records.up.sql  000012_vector_backend_configs.down.sql  000012_vector_backend_configs.up.sql  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/creel/: __init__.py  client.py  exceptions.py  models.py
(+245 files in other folders)
