[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "creel-sdk"
version = "0.5.0"
description = "Python SDK for the Creel memory-as-a-service platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/tightlinesoftware/creel"
Documentation = "https://github.com/tightlinesoftware/creel/tree/main/sdk/python"
